<resources>
    <string name="app_name">My World</string>
    <string name="btn_01">点我有惊喜</string>
    <string name="first_btn">第一个按钮</string>
    <string name="add_item">Add</string>
    <string name="remove_item">Remove</string>
    <string name="second_btn">第二个按钮</string>
    <string name="this_is_a_dialog_activity">This is a dialog activity</string>
    <string name="this_is_a_normal_activity">This is a normal activity</string>
    <string name="normal">Normal</string>
    <string name="dialog">Dialog</string>
    <string name="hello_activity">Hello Activity</string>
    <string name="third_btn">第三个按钮</string>
    <string name="third">Third</string>
    <string name="hello_android">Hello Android</string>
    <string name="uiwidgetactivity">UIWidgetActivity</string>
    <string name="btn_02">最好别点我</string>
    <string name="ui_button">UI_Button</string>
    <string name="type_something_here">Type Something Here</string>
    <string name="back">Back</string>
    <string name="title_text">Title Text</string>
    <string name="edit">Edit</string>
    <string name="listview_activity">ListView</string>
    <string name="listviewactivity">listviewactivity</string>
    <string name="recyclerviewactivity">recyclerviewactivity</string>
    <string name="send">Send</string>
    <string name="MsgActivity">MsgActivity</string>
    <string name="FragmentActivity">FragmentActivity</string>
    <string name="fragment_button">Fragment Button</string>
    <string name="this_is_the_right_fragment">This is the right Fragment</string>
    <string name="this_is_another_fragment">This is another Fragment</string>
    <string name="broadcastactivity">BroadcastActivity</string>
    <string name="send_broadcast">Send Broadcast</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="account">Account:</string>
    <string name="enter_your_account_please">enter your account,please</string>
    <string name="password">Password:</string>
    <string name="login2">Login2</string>
    <string name="login">Login</string>
    <string name="send_force_offline_broadcast">Send force offline broadcast</string>
    <string name="save_data">Save Data</string>
    <string name="get_data">Get DATA</string>
    <string name="remember_password">Remember Password</string>
    <string name="add_data">ADD DATA</string>
    <string name="databaseactivity">DatabaseActivity</string>
    <string name="update_data">Update Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="query_data">Query Data</string>
    <string name="create_db">Create Database</string>
    <string name="create_db1">Create Litepal DB</string>
    <string name="litepal_add_data">Litepal Add Data</string>
    <string name="greendao_add">GreenDao Add</string>
    <string name="provider_activity">Provider Activity</string>
    <string name="make_call">Make Call</string>


</resources>
