<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/ic_launcher"
    tools:context="com.bridge.helloworld.MainActivity">

    <!--引入自定义布局-->
    <!--<include layout="@layout/title"/>-->

    <!--引入自定义控件 -标题栏-   -->
    <com.bridge.helloworld.util.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.bridge.helloworld.util.TitleLayout>


    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_launcher"
        android:text="@string/btn_01" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_launcher"
        android:text="@string/btn_02"
        tools:layout_editor_absoluteX="260dp"
        tools:layout_editor_absoluteY="0dp" />
    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_activity"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/UI_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uiwidgetactivity"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/list_view01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listviewactivity"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recyclerviewactivity"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/msg_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MsgActivity"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/fragment_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FragmentActivity"
        android:textAllCaps="false" />


    <Button
        android:id="@+id/broadcast_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/broadcastactivity"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/force_offline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_force_offline_broadcast"
        />

    <Button
    android:id="@+id/save_data"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/save_data"
    />

    <Button
        android:id="@+id/get_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_data"
        />
</LinearLayout>
