<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bridge.helloworld.activity.DatabaseActivity">

    <Button
        android:id="@+id/add_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_db"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/update_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_data"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/delete_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_data"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/query_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/query_data"
        android:textAllCaps="false"
        />


    <Button
        android:id="@+id/create_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_db1"
        android:textAllCaps="false"
        />

</LinearLayout>
