<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bridge.helloworld.activity.UIWidgetActivity">

    <TextView
        android:id="@+id/textview_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_android"
        android:textAllCaps="false"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#00ff00"
        />

    <Button
        android:id="@+id/ui_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/ui_button"
        />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_something_here"
        android:maxLines="2"/>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/apple_logo01"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"/>


</LinearLayout>
